codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_generic_tool_call_resolved_name.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Run a command

• Tool [completed]: Terminal (execute)
  └ Output: command output here

────────────────────────────────────────────────────────────────────────────────

• Generic tool call done.

› [DEFAULT_PROMPT]

  ⎇ master · Approvals: Agent · ? for shortcuts
