codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_multi_call_exploring.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Explore files


■ Operation 'AddToHistory' is not supported in ACP mode

────────────────────────────────────────────────────────────────────────────────

• Test message 1Test message 2

────────────────────────────────────────────────────────────────────────────────

• Reading multiple files...

• Explored
  └ Read file1.rs, file2.rs, file3.rs

────────────────────────────────────────────────────────────────────────────────

• Multi-call exploring done.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
