codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_stuck_tool_calls_agent_message_renders.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Analyze files

• Analysis complete despite incomplete tool calls.

› [DEFAULT_PROMPT]

  ⎇ master · Approvals: Agent · ? for shortcuts
