codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_echo.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
■ Operation 'ListCustomPrompts' is not supported in ACP mode


› Echo hello


■ Operation 'AddToHistory' is not supported in ACP mode

────────────────────────────────────────────────────────────────────────────────

• Test message 1Test message 2

• Explored
  └ Read config.toml

────────────────────────────────────────────────────────────────────────────────

• Tool call completed successfully.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
