codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_no_duplicates.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Test interleaved


• Test message 1Test message 2

────────────────────────────────────────────────────────────────────────────────





• Processing command...

• Ran 'Executing interleaved command(test)'
  └ Command completed

────────────────────────────────────────────────────────────────────────────────

• Interleaved test done.


› [DEFAULT_PROMPT]

  ⎇ master · Approvals: Agent · ? for shortcuts
