codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_read.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
› Read test.txt

• Test message 1Test message 2

• Tool [completed]: Reading configuration file (read)
  └ Read: /etc/config.toml
    Output: Configuration loaded successfully

────────────────────────────────────────────────────────────────────────────────

• Tool call completed successfully.

› [DEFAULT_PROMPT]

  ⎇ master · Approvals: Agent · ? for shortcuts
