codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_rendered.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
│ profile:   clifford               │
╰───────────────────────────────────╯


  🍙 Powered by Nori AI 🍙

  Run 'npx nori-ai install' to set up Nori AI enhancements

■ Operation 'ListCustomPrompts' is not supported in ACP mode


› Read test.txt


■ Operation 'AddToHistory' is not supported in ACP mode

─ Worked for 0s ────────────────────────────────────────────────────────────────

• Read complete.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
