codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_calls_during_final_stream.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
────────────────────────────────────────────────────────────────────────────────

• Here is my analysis of the codebase.

• Tool [completed]: Reading SKILL.md (read)
  └ Read: .claude/skills/using-skills/SKILL.md
    Output: SKILL.md read successfully

• Tool [completed]: Searching for undefined (search)
  └ Search: undefined
    Output: Found 5 matches

• Tool [completed]: Reading config.toml (read)
  └ Read: config.toml
    Output: config.toml read successfully

────────────────────────────────────────────────────────────────────────────────

• Let me know if you need anything else.

› [DEFAULT_PROMPT]

  ⎇ master · Approvals: Agent · ? for shortcuts
