codex-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__tool_call_completion.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_snapshot(session.screen_contents())
---
  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /approvals - choose what Codex can do without approval
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues


› test


• Test message 1Test message 2

⚙ Reading configuration file(/etc/config.toml)

─ Worked for 0s ────────────────────────────────────────────────────────────────

• Tool call completed successfully.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
